<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="#FFFFFF"
        android:text="Resources my Devices"
        android:textAlignment="center"
        android:textSize="35sp"

        />

    <TextView
        android:id="@+id/tvVersionAndroidLB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvVersionAndroidLB"
        android:textSize="20sp"
        android:layout_marginTop="15dp"

        />

    <TextView
        android:id="@+id/tvVersionAndroid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvVersionAndroid"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvLigth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLigth"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>


<TableRow android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp">

    <Button
        android:id="@+id/btnOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="#368831"
        android:text="@string/btnOn" />

    <Button
        android:id="@+id/btnOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="#D52121"
        android:text="@string/btnOff" />
</TableRow>


    <TextView
        android:id="@+id/tvLevelBaterryLB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLevelBaterryLB"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tvLevelBaterry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLevelBaterry"
        android:textSize="20sp"/>

    <ProgressBar
        android:id="@+id/pdLevelBaterry"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvStorage"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/etNameFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etNameFile"
        android:inputType="text"
        android:minHeight="48dp" />

    <ImageButton
        android:id="@+id/btnSaveFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/btnSaveFile"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/tvConecxionLB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tvConecxionLB"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvConecxion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvConecxion"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvBluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tvBluetooth"
        android:textSize="20sp" />

    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btnOnBluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#368831"
            android:text="@string/btnOnBluetooth" />

        <Button
            android:id="@+id/btnOffBluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#D52121"
            android:text="@string/btnOffBluetooth" />
    </TableRow>

</LinearLayout>


